config.yaml config docker-compose

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,2 +1,11 @@
-postgres: 
-    
+postgres:
+  db_host: ${DB_HOST}
+  db_port: ${DB_PORT}
+  db_external_port: ${DB_EXTERNAL_PORT}
+  db_username: ${DB_USERNAME}
+  db_name: ${DB_NAME}
+  db_sslmode: ${DB_SSLMODE}
+  db_password: ${DB_PASSWORD}
+
+server:
+  port: ${PORT}
