--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   auth_service:
     build:
@@ -8,7 +6,7 @@ services:
     ports:
       - "${PORT}:${PORT}"
     volumes:
-      - ./config/config.yaml:/app/config.yaml
+      - ./config/config.yaml:/app/config/config.yaml
     depends_on:
       - db
     restart: on-failure
@@ -21,14 +19,13 @@ services:
       - POSTGRES_USER=${DB_USERNAME}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
-      - DB_EXTERNAL_PORT=${DB_EXTERNAL_PORT}
-      - DB_PORT=${DB_PORT}
     ports:
       - "${DB_EXTERNAL_PORT}:${DB_PORT}"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     networks:
       - app_network
+
 volumes:
   pgdata:
 
